[package]
name = "d7049e_game_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.34.0"
nalgebra = "0.30"
conrod = { version = "0.55.0", features = ["glium", "winit"] }
find_folder="0.3.0"
rapier3d = "0.11.1"
tobj = "3.2.2"


